testcases/pos/type/valdecl_non_annotated_clean_type.bard
let val x = 10
in
    x + 7
end
