testcases/neg/eval/leaked_env.bard
let val y = let val x = 10 in x + 6 end
in
    x
end
